--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,7 +10,7 @@ jobs:
   run-tests:
     name: ${{ matrix.shard_name }}(py=${{ matrix.python-version }},dj=${{ matrix.django-version }},mongo=${{ matrix.mongo-version }})
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: ubuntu-20.04
+    runs-on: [ "ubuntu-20.04" ]
     strategy:
       matrix:
         python-version:
@@ -56,6 +56,14 @@ jobs:
         #     mongo-version: "4.4"
 
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: install system requirements
         run: |
           sudo apt-get update && \
@@ -77,14 +85,6 @@ jobs:
           sudo mkdir -p /data/db
           sudo chmod -R a+rw /data/db
           mongod &
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: checkout repo
-        uses: actions/checkout@v3
 
       - name: install requirements
         run: |
@@ -132,7 +132,7 @@ jobs:
           jobs: ${{ toJSON(needs) }}
 
   compile-warnings-report:
-    runs-on: ubuntu-20.04
+    runs-on: [ "ubuntu-20.04" ]
     needs: [ run-tests ]
     steps:
       - uses: actions/checkout@v3
