--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -9,8 +9,14 @@ on:
 jobs:
   collect-and-verify:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: ubuntu-20.04
+    runs-on: [ "ubuntu-20.04" ]
     steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - name: install system requirements
         run: |
           sudo apt-get update && \
@@ -19,12 +25,6 @@ jobs:
           libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv && \
           sudo rm -rf /var/lib/apt/lists/*
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - uses: actions/checkout@v2
       - name: install requirements
         run: |
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
