--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -66,11 +66,7 @@ jobs:
 
       - name: install system requirements
         run: |
-          sudo apt-get update && \
-          sudo apt-get install --yes \
-          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
-          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv && \
-          sudo rm -rf /var/lib/apt/lists/*
+          make ubuntu-requirements
 
       - name: install mongo version
         run: |
@@ -88,9 +84,6 @@ jobs:
 
       - name: install requirements
         run: |
-          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
-          python3-parted python3-pexpect python3-pyasn1-modules python3-simplejson \
-          python3-systemd python3-yaml ufw -y
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
