--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -19,17 +19,10 @@ jobs:
 
       - name: install system requirements
         run: |
-          sudo apt-get update && \
-          sudo apt-get install --yes \
-          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
-          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv && \
-          sudo rm -rf /var/lib/apt/lists/*
+          make ubuntu-requirements
 
       - name: install requirements
         run: |
-          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
-          python3-parted python3-pexpect python3-pyasn1-modules python3-simplejson \
-          python3-systemd python3-yaml ufw -y
           sudo make test-requirements
 
       - name: verify unit tests count
